Fix tinymce overflow on mobile

--- a/core-bundle/src/Resources/contao/themes/flexible/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/main.css
@@ -1994,6 +1994,7 @@ label.error,legend.error,.tl_checkbox_container.error legend {
 
 /* Fieldsets */
 fieldset.tl_tbox,fieldset.tl_box {
+	min-width:0;
 	margin-top:5px;
 	padding-top:0;
 	border-top:none;
